# content

./: .gitignore  README.md  agent-workflow
.github/: README.md  copilot-instructions.md
.github/agent-tools/: README.md
.github/agent-tools/gmail-reader/: README.md  WORKFLOW.md  backup-db.sh  pyproject.toml
.github/agent-tools/gmail-reader/gmail_reader/: app.py
.github/agent-tools/image-upload/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/agent-tools/image-upload/image_upload/: __init__.py  cli.py  uploader.py
.github/agent-tools/wiki-automation/: README.md  pyproject.toml
.github/agent-tools/wiki-automation/tests/: test_search.py
.github/agent-tools/wiki-automation/wiki_automation/: cli.py
.github/project-docs/: backlog-workflow.md
.github/scripts/: validate_content.py
.github/workflows/: automation-checks.yml  hexo-deploy.yml  trigger-sites.yml
Biology/Dermatology/: mitochondria-and-skin-aging.md
Child Development/: child-development-research.md
Child Development/Newborn/: what-is-a-newborn.md
Child Development/Parenting/: research.md
Natural Healing/Botanicals/: aloysia-polystachya.md  astragalus.md  eucalyptus.md
Natural Healing/Chemicals/: hydroxytyrosol.md  oleocanthal.md  oleuropein.md
Natural Healing/Fiber/: what-is-fiber.md
Natural Healing/Nut and Seed Products/: grape-seed-extract.md
Natural Healing/Oils and Fats/: jojoba-oil.md  olive-oil.md
Natural Healing/Probiotics/: bifidobacteria.md
Natural Healing/Spices and Herbs/: bay-leaf.md
Real Estate Project/: notes.md  research.md
(+41 files in other folders)
