[project]
name = "wiki-automation"
version = "0.1.0"
description = "Automation helpers for the content repo agent workflow"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
wiki-automation = "wiki_automation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
